--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -46,6 +46,9 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Noah\Scripts\Camera.cs" />
+     <Compile Include="Assets\Noah\Scripts\Currency.cs" />
+     <Compile Include="Assets\Noah\Scripts\PlayerMovement.cs" />
+     <Compile Include="Assets\Noah\Scripts\UpgradeButton.cs" />
  <Reference Include="UnityEngine.Networking">
  <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/Networking/UnityEngine.Networking.dll</HintPath>
  </Reference>
