Currency + Upgrade Buttons + Camera name change

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -45,9 +45,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\Noah\Scripts\Camera.cs" />
      <Compile Include="Assets\Noah\Scripts\Currency.cs" />
+     <Compile Include="Assets\Noah\Scripts\MouseCamera.cs" />
      <Compile Include="Assets\Noah\Scripts\PlayerMovement.cs" />
+     <Compile Include="Assets\Noah\Scripts\PlayerStats.cs" />
      <Compile Include="Assets\Noah\Scripts\UpgradeButton.cs" />
  <Reference Include="UnityEngine.Networking">
  <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/Networking/UnityEngine.Networking.dll</HintPath>
