--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -45,6 +45,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Noah\Scripts\ChSpeedUpgrade.cs" />
      <Compile Include="Assets\Noah\Scripts\Currency.cs" />
      <Compile Include="Assets\Noah\Scripts\MouseCamera.cs" />
      <Compile Include="Assets\Noah\Scripts\PlayerMovement.cs" />
