--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -47,10 +47,12 @@
   <ItemGroup>
      <Compile Include="Assets\Noah\Scripts\ChSpeedUpgrade.cs" />
      <Compile Include="Assets\Noah\Scripts\Currency.cs" />
+     <Compile Include="Assets\Noah\Scripts\LoadScene.cs" />
      <Compile Include="Assets\Noah\Scripts\MouseCamera.cs" />
      <Compile Include="Assets\Noah\Scripts\MovementUpgrade.cs" />
+     <Compile Include="Assets\Noah\Scripts\PauseMenuEnabled.cs" />
+     <Compile Include="Assets\Noah\Scripts\PlayerManager.cs" />
      <Compile Include="Assets\Noah\Scripts\PlayerMovement.cs" />
-     <Compile Include="Assets\Noah\Scripts\PlayerStats.cs" />
      <Compile Include="Assets\Noah\Scripts\RockHoldUpgrade.cs" />
      <Compile Include="Assets\Noah\Scripts\WoodHoldUpgrade.cs" />
  <Reference Include="UnityEngine.Networking">
